# Lab2

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  draw.py
include/: algorithms.hpp  global.hpp  matrix.hpp  mpi_util.hpp
inputs/: input120.txt  input60.txt  input600.txt
results/block/: data.csv
results/cannon/: data.csv
results/column/: data.csv
results/naive/: data.csv
results/row/: data.csv
src/: algorithms.cpp  global.cpp  main.cpp  matrix.cpp  mpi_util.cpp
